{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 36,
  "lineage": "dc27839b-db63-57c9-8228-1bfc06ff9f2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019a292cfb114a776",
            "arn": "arn:aws:ec2:eu-west-2:638509636314:instance/i-00d5b80dbb26495b5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d5b80dbb26495b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec80bd97d75ed93a",
            "private_dns": "ip-172-10-0-177.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.0.177",
            "public_ip": "3.8.28.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "IAC": "Terraform",
                  "cloud": "AWS",
                  "env": "dev",
                  "owner": "adrcanfer"
                },
                "throughput": 125,
                "volume_id": "vol-0c23dafb5d0c64199",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a43cb80cd122770",
            "tags": {
              "Name": "apache"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "apache",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0981c4e52580233f8"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_london",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019a292cfb114a776",
            "arn": "arn:aws:ec2:eu-west-2:638509636314:instance/i-02e9be6c7d5a3b81f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e9be6c7d5a3b81f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063e3e2bbf89ff383",
            "private_dns": "ip-172-10-0-168.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.0.168",
            "public_ip": "13.43.136.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "IAC": "Terraform",
                  "cloud": "AWS",
                  "env": "dev",
                  "owner": "adrcanfer"
                },
                "throughput": 125,
                "volume_id": "vol-0524f4163e885f6e7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a43cb80cd122770",
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "mysql",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0981c4e52580233f8"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_london",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019a292cfb114a776",
            "arn": "arn:aws:ec2:eu-west-2:638509636314:instance/i-009454e27b8bd0b2f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009454e27b8bd0b2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e353b4016b11da0",
            "private_dns": "ip-172-10-0-171.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.0.171",
            "public_ip": "13.42.52.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "IAC": "Terraform",
                  "cloud": "AWS",
                  "env": "dev",
                  "owner": "adrcanfer"
                },
                "throughput": 125,
                "volume_id": "vol-05381cc9915646d22",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a43cb80cd122770",
            "tags": {
              "Name": "nginx"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "nginx",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0981c4e52580233f8"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_london",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:638509636314:internet-gateway/igw-0db68265f4eec227a",
            "id": "igw-0db68265f4eec227a",
            "owner_id": "638509636314",
            "tags": {
              "Name": "IGW VPC London"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "IGW VPC London",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "vpc_id": "vpc-003790b2b9b729a4c"
          },
          "dependencies": [
            "aws_vpc.vpc_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "public_crta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfefb6c8aa3b6803",
            "original_route_table_id": "rtb-08696e69305dc38bf",
            "route_table_id": "rtb-0ce136e8edd17de49",
            "vpc_id": "vpc-003790b2b9b729a4c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_vpc.vpc_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:638509636314:route-table/rtb-0ce136e8edd17de49",
            "id": "rtb-0ce136e8edd17de49",
            "owner_id": "638509636314",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db68265f4eec227a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Public route table",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "timeouts": null,
            "vpc_id": "vpc-003790b2b9b729a4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:638509636314:security-group/sg-0981c4e52580233f8",
            "description": "Allow SSH over Internet",
            "egress": [],
            "id": "sg-0981c4e52580233f8",
            "ingress": [],
            "name": "Public Instance Security Group",
            "name_prefix": "",
            "owner_id": "638509636314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance Security Group"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Public Instance Security Group",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "timeouts": null,
            "vpc_id": "vpc-003790b2b9b729a4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:638509636314:subnet/subnet-04074615dbd39184e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04074615dbd39184e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638509636314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet privada_temp"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Subnet privada_temp",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "vpc_id": "vpc-003790b2b9b729a4c"
          },
          "dependencies": [
            "aws_instance.public_instance",
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_london",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:638509636314:subnet/subnet-05a43cb80cd122770",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a43cb80cd122770",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "638509636314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet pública_temp"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Subnet pública_temp",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "vpc_id": "vpc-003790b2b9b729a4c"
          },
          "dependencies": [
            "aws_vpc.vpc_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_london",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:638509636314:vpc/vpc-003790b2b9b729a4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.10.0.0/16",
            "default_network_acl_id": "acl-01b8ca2faa5498c7d",
            "default_route_table_id": "rtb-08696e69305dc38bf",
            "default_security_group_id": "sg-00a5960393ed77dda",
            "dhcp_options_id": "dopt-0293ff338a8dbf151",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003790b2b9b729a4c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08696e69305dc38bf",
            "owner_id": "638509636314",
            "tags": {
              "name": "Example VPC"
            },
            "tags_all": {
              "IAC": "Terraform",
              "cloud": "AWS",
              "env": "dev",
              "name": "Example VPC",
              "owner": "adrcanfer"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:638509636314:security-group-rule/sgr-04fd79966faafe767",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04fd79966faafe767",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0981c4e52580233f8",
            "security_group_rule_id": "sgr-04fd79966faafe767",
            "tags": null,
            "tags_all": {
              "IAC": "Terraform",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc_london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:638509636314:security-group-rule/sgr-0db81dcc7c38a76ec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0db81dcc7c38a76ec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0981c4e52580233f8",
            "security_group_rule_id": "sgr-0db81dcc7c38a76ec",
            "tags": null,
            "tags_all": {
              "IAC": "Terraform",
              "cloud": "AWS",
              "env": "dev",
              "owner": "adrcanfer"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc_london"
          ]
        }
      ]
    }
  ]
}